Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26467

[REG 5.0.2 -> 6.0.0] Confusing content in "Application output"

XMLWordPrintable

    • 0556eec9b713a6613d400c64c6043e761827c716 (qt-creator/qt-creator/6.0)

      1. Create a new Qt Widgets Application project using defaults.
      2. Run it.
      3. Open the "Application Output" view.
      4. Press the small "Stop" button on top of the view.
        In the view you can read something like:
        22:11:33: Starting /tmp/projekte/build-untitled3-Desktop-Debug/untitled3...
        22:12:08: Failed to start program. Path or permissions wrong?
        22:12:08: /tmp/projekte/build-untitled3-Desktop-Debug/untitled3 exited with code -1
        22:12:08: /tmp/projekte/build-untitled3-Desktop-Debug/untitled3 crashed.
        

        So as soon as I stop the application, Creator tells me that it could not be started. But how could it return -1, then? And why did it return -1 before it crashed?

      This is a regression. In Creator 5.0.2 you can read something like:

      22:15:16: Starting /tmp/projekte/build-untitled4-Desktop-Debug/untitled4 ...
      22:15:26: The program has unexpectedly finished.
      22:15:26: The process was ended forcefully.
      22:15:26: /tmp/projekte/build-untitled4-Desktop-Debug/untitled4 crashed.
      

      This is still somewhat confusing but at least more consistent.

        For Gerrit Dashboard: QTCREATORBUG-26467
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes